[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyapollo-zenkilan"
version = "1.0.0"
description = "Apollo configuration client with async support and pydantic integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "lantianyou", email = "434209210@qq.com" }]
maintainers = [{ name = "lantianyou", email = "434209210@qq.com" }]
keywords = ["apollo", "configuration", "async", "client", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "requests>=2.25.0",
    "aiohttp>=3.7.0",
    "aiofiles>=0.6.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "aioresponses>=0.7",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/OuterCloud/pyapollo"
Documentation = "https://github.com/OuterCloud/pyapollo#readme"
Repository = "https://github.com/OuterCloud/pyapollo"
Issues = "https://github.com/OuterCloud/pyapollo/issues"
Changelog = "https://github.com/OuterCloud/pyapollo/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --cov=pyapollo --cov-report=term-missing -m 'not integration'"
markers = [
    "integration: live Apollo server tests (run with pytest -m integration)",
]

[tool.coverage.run]
source = ["pyapollo"]
branch = true
omit = [
    "src/pyapollo/client/sync.py",
    "src/pyapollo/client/async_.py",
    "src/pyapollo/transport/async_.py",
    "src/pyapollo/repository/async_.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "SIM", "RUF",
]
ignore = [
    "B904",  # raise from - legacy client exception chaining, fix in phase 5
    "SIM105",  # contextlib.suppress in async polling - fix in phase 5
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/pyapollo/client/sync.py" = ["E501"]
"src/pyapollo/client/async_.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
packages = ["pyapollo"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "pyapollo.client.sync",
    "pyapollo.client.async_",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pyapollo.config.settings",
]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aiofiles.*"]
ignore_missing_imports = true
